--- a/config.yml
+++ b/config.yml
@@ -17,4 +17,5 @@ authprovider:
     LDAPAddr: "192.168.1.90:389"
     DCString: "dc=unitecloud,dc=net"
     UserObjectClass: "simpleSecurityObject"
+    AdminInformation: "userSecurityInformation"
     IPAddressAttribute: "ipHostNumber"
